apps/backend/backend.log

> backend@0.0.1 start:dev
> nest start --watch

[2J[3J[H[[90m10:25:39 PM[0m] Starting compilation in watch mode...

[[90m10:25:39 PM[0m] Found 0 errors. Watching for file changes.

(node:34083) [DEP0190] DeprecationWarning: Passing args to a child process with shell option true can lead to security vulnerabilities, as the arguments are not escaped, only concatenated.
(Use `node --trace-deprecation ...` to show where the warning was created)
/Users/jaeyoung/Desktop/work/vibe_coding/investie_intern/investie/packages/mock/src/index.ts:1
import { MarketSummaryData, StockCardData, StockSymbol } from '@investie/types';
         ^^^^^^^^^^^^^^^^^

SyntaxError: The requested module '@investie/types' does not provide an export named 'MarketSummaryData'
    at ModuleJobSync.runSync (node:internal/modules/esm/module_job:477:37)
    at ModuleLoader.importSyncForRequire (node:internal/modules/esm/loader:437:47)
    at loadESMFromCJS (node:internal/modules/cjs/loader:1565:24)
    at Module._compile (node:internal/modules/cjs/loader:1716:5)
    at Object.loadTS [as .ts] (node:internal/modules/cjs/loader:1826:10)
    at Module.load (node:internal/modules/cjs/loader:1469:32)
    at Module._load (node:internal/modules/cjs/loader:1286:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1491:12)

Node.js v24.2.0
